# pinktrace

./: .gitignore  .mailmap  COPYRIGHT  Makefile.am  NEWS.markdown  NEWS.mkd  README.markdown  README.mkd  Setup.lhs.in  TODO.markdown  TODO.mkd  _config.yml  autogen.sh  c-pink-about.html  c-pink-fork-freebsd.html  c-pink-fork-linux.html  c-pink-simple-strace-freebsd.html  c-pink-simple-strace-linux.html  configure.ac  haddock.sh  haskell-test.sh.in  pinktrace.cabal.in  pinktrace.pc.in  py-pink-about.html  py-pink-fork-freebsd.html  py-pink-fork-linux.html  py-pink-simple-strace-freebsd.html  py-pink-simple-strace-linux.html  rb-pink-about.html  rb-pink-fork-freebsd.html  rb-pink-fork-linux.html  rb-pink-simple-strace-freebsd.html  rb-pink-simple-strace-linux.html
doc/: Makefile.am  _config.yml.in  doxygen.conf.in  index.markdown  index.mkd  index.mkd.in
doc/_includes/: footer.html  google-analytics.html  menu.html
doc/_layouts/: default.html
doc/_scripts/: examples.rb
doc/api/: Makefile.am
doc/api/c/: Makefile.am  doxygen.conf.in  groups.doxygen  (+1 more)
doc/css/: screen.css  screen.css.in  syntax.css
examples/: Makefile.am  pink-about.c  pink-example.c  pink-fork.c  pink-high.c  pink-low.c  pink-simple-strace.c
examples/c/: Makefile.am  makefile-freebsd.txt  makefile-linux.txt  pink-about.c  pink-fork-freebsd.c  pink-fork-linux.c  pink-fork.c  pink-simple-strace-freebsd.c  pink-simple-strace-linux.c  pink-simple-strace.c
examples/haskell/: Makefile.am  pink-about.hs  pink-fork-freebsd.hs  pink-fork-linux.hs
examples/python/: Makefile.am  pink-about.py  pink-fork-freebsd.py  pink-fork-linux.py  pink-fork.py  pink-simple-strace-freebsd.py  pink-simple-strace-linux.py  pink-simple-strace.py
examples/ruby/: Makefile.am  pink-about.rb  pink-fork-freebsd.rb  pink-fork-linux.rb  pink-fork.rb  pink-simple-strace-freebsd.rb  pink-simple-strace-linux.rb  pink-simple-strace.rb
python/: Makefile.am  TEST_01_trace.py  TEST_01_trace.py.in  TEST_02_fork.py  TEST_02_fork.py.in  TEST_03_event.py  TEST_03_event.py.in  TEST_04_bitness.py  TEST_04_bitness.py.in  TEST_05_syscall.py  TEST_05_syscall.py.in  TEST_06_string.py  TEST_06_string.py.in  TEST_07_socket.py  TEST_07_socket.py.in  TEST_bitness.py  TEST_bitness.py.in  TEST_event.py  TEST_event.py.in  TEST_socket.py  TEST_socket.py.in  TEST_socket_freebsd.py  TEST_socket_freebsd.py.in  TEST_socket_linux.py  TEST_socket_linux.py.in  TEST_strarray_freebsd.py  TEST_strarray_linux.py  TEST_string.py  TEST_string.py.in  TEST_string_freebsd.py  TEST_string_freebsd.py.in  TEST_string_linux.py  TEST_string_linux.py.in  TEST_syscall.py  TEST_syscall.py.in  TEST_syscall_freebsd.py  TEST_syscall_freebsd.py.in  TEST_syscall_linux.py  TEST_syscall_linux.py.in  TEST_trace.py  (+4 more)
python/pinktrace/: Makefile.am  __init__.py  __init__.py.in  about.c  about.pyx  bitness.c  bitness.pyx  event.c  event.pyx  fork.c  fork.pyx  pink-python-about.c  pink-python-bitness.c  pink-python-event.c  pink-python-fork.c  pink-python-hacks.h  pink-python-socket.c  pink-python-strarray.c  pink-python-string.c  pink-python-syscall.c  pink-python-trace.c  socket.c  string.c  string.pyx  syscall.c  syscall.pyx  trace.c  trace.pyx
ruby/: Makefile.am  TEST_01_invalid.rb  TEST_01_trace.rb  TEST_01_trace_invalid.rb  TEST_02_fork.rb  TEST_02_trace.rb  TEST_03_event.rb  TEST_03_fork.rb  TEST_04_bitness.rb  TEST_04_event.rb  TEST_05_bitness.rb  TEST_05_syscall.rb  TEST_06_string.rb  TEST_06_syscall.rb  TEST_07_socket.rb  TEST_07_string.rb  TEST_08_socket_address.rb  TEST_bitness.rb  TEST_event.rb  TEST_socket.rb  TEST_socket_address.rb  TEST_socket_address_freebsd.rb  TEST_socket_address_linux.rb  TEST_socket_linux.rb  TEST_strarray_freebsd.rb  TEST_strarray_linux.rb  TEST_string_freebsd.rb  TEST_string_linux.rb  TEST_syscall.rb  TEST_syscall_freebsd.rb  TEST_syscall_linux.rb  TEST_trace.rb  bitness.c  event.c  globals.h  init.c  pink-ruby.c  ruby-test.sh  socket.c  strarray.c  (+3 more)
src/: Makefile.am  pink-bitness.c  pink-callback.c  pink-context.c  pink-decode-array.c  pink-error.c  pink-event.c  pink-fork.c  pink-freebsd-event.c  pink-freebsd-fbsd32.conf  pink-freebsd-i386.conf  pink-freebsd-name-amd64.c  pink-freebsd-name-i386.c  pink-freebsd-trace-amd64.c  pink-freebsd-trace-i386.c  pink-freebsd-trace-x86.c  pink-freebsd-trace.c  pink-freebsd-util.c  pink-handler.c  pink-linux-event.c  pink-linux-name-arm.c  pink-linux-name-ia64.c  pink-linux-name-powerpc.c  pink-linux-name-x86.c  pink-linux-name-x86_64.c  pink-linux-name.c  pink-linux-name32.c  pink-linux-name64.c  pink-linux-socket.c  pink-linux-syscallent-ia64.h  pink-linux-syscallent-powerpc.h  pink-linux-trace-arm.c  pink-linux-trace-ia64.c  pink-linux-trace-powerpc.c  pink-linux-trace-x86.c  pink-linux-trace-x86_64.c  pink-linux-trace.c  pink-linux-util.c  pink-loop.c  pink-name-wrap.c  (+13 more)
src/backend/: Makefile.am
src/easy/: Makefile.am  pink-easy-attach.c  pink-easy-call.c  pink-easy-context.c  pink-easy-error.c  pink-easy-exec.c  pink-easy-internal.c  pink-easy-loop.c  pink-easy-process.c
src/freebsd/: Makefile.am
src/linux/: Makefile.am
tests/: Makefile.am  check_bitness.c  check_context.c  check_decode.c  check_encode.c  check_event.c  check_fork.c  check_freebsd_decode.c  check_freebsd_encode.c  check_freebsd_trace.c  check_freebsd_util.c  check_libpinktrace.c  check_linux_decode.c  check_linux_encode.c  check_linux_event.c  check_linux_trace.c  check_linux_util.c  check_pinktrace.h  check_trace.c  check_util.c  main.c
tests/easy/: Makefile.am  check_easy_loop.c  check_easy_process.c  check_pinktrace_easy.c  check_pinktrace_easy.h  main.c  t01-exit-genuine.c  t02-exit-signal.c  t03-signal.c  t04-pre-exit.c  t05-pre-exit-signal.c
tests/proc/: Makefile.am  check_decode.c  check_fs.c  check_pinktrace_proc.h  check_util.c  main.c
tests/ptrace/: Makefile.am  check_bitness.c  check_freebsd_decode.c  check_freebsd_encode.c  check_freebsd_trace.c  check_freebsd_util.c  check_linux_decode.c  check_linux_encode.c  check_linux_event.c  check_linux_trace.c  check_linux_util.c  check_pinktrace_ptrace.h  main.c
(+297 files in other folders)
